vcl/inc/outfont.hxx
@@ -156,6 +156,22 @@ friend class ImplDevFontListData;
 // - ImplFontSelectData -
 // ----------------------
 
+struct ItalicMatrix
+{
+    double xx, xy, yx, yy;
+    ItalicMatrix() : xx(1), xy(0), yx(0), yy(1) {}
+};
+
+inline bool operator ==(const ItalicMatrix& a, const ItalicMatrix& b)
+{
+    return a.xx == b.xx && a.xy == b.xy && a.yx == b.yx && a.yy == b.yy;
+}
+
+inline bool operator !=(const ItalicMatrix& a, const ItalicMatrix& b)
+{
+    return a.xx != b.xx || a.xy != b.xy || a.yx != b.yx || a.yy != b.yy;
+}
+
 class ImplFontSelectData : public ImplFontAttributes
 {
 public:
@@ -174,6 +190,9 @@ public: // TODO: change to private
     LanguageType        meLanguage;         // text language
     bool                mbVertical;         // vertical mode of requested font
     bool                mbNonAntialiased;   // true if antialiasing is disabled
+
+    bool                mbEmbolden;         // Force emboldening
+    ItalicMatrix        maItalicMatrix;     // Force matrix for slant
 
     const ImplFontData* mpFontData;         // a matching ImplFontData object
     ImplFontEntry*      mpFontEntry;        // pointer to the resulting FontCache entry
